Correccion codigo